tests/fixtures/errors/missing-package/src/main.ts
import { something } from 'package-that-does-not-exist';
console.log(something);